movies and shows page  upload

--- a/src/index.css
+++ b/src/index.css
@@ -32,4 +32,34 @@ code {
   opacity: 1;
 }
 
+/* *{
+ outline: auto;
+} */
+
+
+.hover-video-container {
+  position: relative;
+  display: inline-block;
+}
+
+.hover-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.hover-video-container:hover .hover-video {
+  opacity: 1;
+}
+
+.hover-video-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
 
