--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,16 @@ code {
     monospace;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.scroll-container {
+  scroll-snap-type: x mandatory;
+}
+.scroll-item {
+  scroll-snap-align: start;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -63,3 +73,18 @@ code {
   height: auto;
 }
 
+.info-title{
+  @apply text-tSecondary text-lg flex items-center;
+}
+
+.form-boxes{
+  @apply space-y-2 md:w-96
+}
+
+.form-inputs{
+  @apply p-3 border bg-transparent rounded-md w-full
+}
+
+.table-style {
+  @apply border border-bdPrimary p-5 rounded-md
+}
